設定を微調整

--- a/.devcontainer/post_create.yml
+++ b/.devcontainer/post_create.yml
@@ -2,11 +2,22 @@
   hosts: all
   become: false
   gather_facts: false
+  pre_tasks:
+    - name: マシン情報を取得
+      ansible.builtin.setup:
+        gather_subset:
+          - system
+      become: true
   roles:
     - role: lde
+      when: ansible_facts.system == 'Linux'
     - role: font
       become: true
+      when: ansible_facts.system == "Linux"
     - role: redmine
+      when: ansible_facts.system == "Linux"
     - role: document
+      when: ansible_facts.system == "Linux"
     - role: vscode
+      when: ansible_facts.system == "Linux"
   tasks: []
