--- a/.devcontainer/roles/lde/defaults/main.yml
+++ b/.devcontainer/roles/lde/defaults/main.yml
@@ -1,16 +1,16 @@
 ---
 tbls_version: latest
 
-runn_install: true
-runn_version: latest
-
 git_delta_install: true
 git_delta_version: latest
 
 d2_install: true
 d2_version: latest
 
-pandoc_install: true
+pandoc_install: false
 pandoc_version: latest
 
-pict_install: true
+runn_install: false
+runn_version: latest
+
+pict_install: false
