--- a/.devcontainer/group_vars/all.yml
+++ b/.devcontainer/group_vars/all.yml
@@ -7,8 +7,27 @@ redmine_admin:
   email:
   passowrd:
 
-redmine_plugins: {}
-redmine_themes: {}
+## -----------
+## プラグイン
+## -----------
+# redmine_plugins:
+#   view_customize:
+#     repo: https://github.com/onozaty/redmine-view-customize.git
+#     version: master
+
+## -----------
+## テーマ
+## -----------
+# redmine_themes:
+#   farend_fancy:
+#     repo: https://github.com/farend/redmine_theme_farend_fancy.git
+#     version: support-propshaft
+#   farend_basic:
+#     repo: https://github.com/farend/redmine_theme_farend_basic.git
+#     version: support-propshaft
+#   bleuclair:
+#     repo: https://github.com/farend/redmine_theme_farend_bleuclair.git
+#     version: support-propshaft
 
 redmine_group: {}
 redmine_users: {}
