--- a/.devcontainer/roles/redmine/tasks/setting.yml
+++ b/.devcontainer/roles/redmine/tasks/setting.yml
@@ -1,1 +1,302 @@
 ---
+- name: Import Redmine settings
+  environment:
+    RAILS_ENV: "{{ redmine_rails_env }}"
+    REDMINE_LANG: "{{ redmine_lang }}"
+  block:
+    - name: Create setting import script
+      ansible.builtin.copy:
+        src: import.rb
+        dest: "{{ redmine_bin_dir }}/import.rb"
+        mode: "0750"
+    - name: Create import admin setting files
+      ansible.builtin.template:
+        src: import_data.yml.j2
+        dest: "{{ redmine_tmp_dir }}/admin.yml"
+        mode: "0640"
+      vars:
+        redmine_import_data: "{{ redmine_admin | default({}) }}"
+      when: >
+        generate_secret_token_result is changed
+        or
+        redmine_reimport_admin | default(false)
+    - name: Create import issue status setting files
+      ansible.builtin.template:
+        src: import_data.yml.j2
+        dest: "{{ redmine_tmp_dir }}/status.yml"
+        mode: "0640"
+      vars:
+        redmine_import_data: "{{ redmine_statuses | default([]) }}"
+      when: >
+        generate_secret_token_result is changed
+        or
+        redmine_reimport_all | default(true)
+        or
+        redmine_reimport_status | default(false)
+    - name: Create import tracker setting files
+      ansible.builtin.template:
+        src: import_data.yml.j2
+        dest: "{{ redmine_tmp_dir }}/tracker.yml"
+        mode: "0640"
+      vars:
+        redmine_import_data: "{{ redmine_trackers | default([]) }}"
+      when: >
+        generate_secret_token_result is changed
+        or
+        redmine_reimport_all | default(true)
+        or
+        redmine_reimport_tracker | default(false)
+    - name: Create import redmine setting files
+      ansible.builtin.template:
+        src: import_data.yml.j2
+        dest: "{{ redmine_tmp_dir }}/setting.yml"
+        mode: "0640"
+      vars:
+        redmine_import_data: "{{ redmine_settings | default({}) }}"
+      when: >
+        generate_secret_token_result is changed
+        or
+        redmine_reimport_all | default(true)
+        or
+        redmine_reimport_setting | default(false)
+    - name: Create import role setting files
+      ansible.builtin.template:
+        src: import_data.yml.j2
+        dest: "{{ redmine_tmp_dir }}/role.yml"
+        mode: "0640"
+      vars:
+        redmine_import_data: "{{ redmine_roles | default([]) }}"
+      when: >
+        generate_secret_token_result is changed
+        or
+        redmine_reimport_all | default(true)
+        or
+        redmine_reimport_role | default(false)
+    - name: Create import issue custom field setting files
+      ansible.builtin.template:
+        src: import_data.yml.j2
+        dest: "{{ redmine_tmp_dir }}/issue_custom_field.yml"
+        mode: "0640"
+      vars:
+        redmine_import_data: "{{ redmine_issue_custom_fields | default([]) }}"
+      when: >
+        generate_secret_token_result is changed
+        or
+        redmine_reimport_all | default(true)
+        or
+        redmine_reimport_issue_custom_field | default(false)
+    - name: Create import project custom field setting files
+      ansible.builtin.template:
+        src: import_data.yml.j2
+        dest: "{{ redmine_tmp_dir }}/project_custom_field.yml"
+        mode: "0640"
+      vars:
+        redmine_import_data: "{{ redmine_project_custom_fields | default([]) }}"
+      when: >
+        generate_secret_token_result is changed
+        or
+        redmine_reimport_all | default(true)
+        or
+        redmine_reimport_project_custom_field | default(false)
+    - name: Create import user custom field setting files
+      ansible.builtin.template:
+        src: import_data.yml.j2
+        dest: "{{ redmine_tmp_dir }}/user_custom_field.yml"
+        mode: "0640"
+      vars:
+        redmine_import_data: "{{ redmine_user_custom_fields | default([]) }}"
+      when: >
+        generate_secret_token_result is changed
+        or
+        redmine_reimport_all | default(true)
+        or
+        redmine_reimport_user_custom_field | default(false)
+    - name: Create import priority setting files
+      ansible.builtin.template:
+        src: import_data.yml.j2
+        dest: "{{ redmine_tmp_dir }}/priority.yml"
+        mode: "0640"
+      vars:
+        redmine_import_data: "{{ redmine_priorities | default([]) }}"
+      when: >
+        generate_secret_token_result is changed
+        or
+        redmine_reimport_all | default(true)
+        or
+        redmine_reimport_priority | default(false)
+    - name: Create import document category setting files
+      ansible.builtin.template:
+        src: import_data.yml.j2
+        dest: "{{ redmine_tmp_dir }}/document_category.yml"
+        mode: "0640"
+      vars:
+        redmine_import_data: "{{ redmine_document_categories | default([]) }}"
+      when: >
+        generate_secret_token_result is changed
+        or
+        redmine_reimport_all | default(true)
+        or
+        redmine_reimport_document_category | default(false)
+    - name: Create import time entry activity setting files
+      ansible.builtin.template:
+        src: import_data.yml.j2
+        dest: "{{ redmine_tmp_dir }}/time_entry_activity.yml"
+        mode: "0640"
+      vars:
+        redmine_import_data: "{{ redmine_time_entry_activities | default([]) }}"
+      when: >
+        generate_secret_token_result is changed
+        or
+        redmine_reimport_all | default(true)
+        or
+        redmine_reimport_time_entry_activity | default(false)
+    - name: Create import custom query setting files
+      ansible.builtin.template:
+        src: import_data.yml.j2
+        dest: "{{ redmine_tmp_dir }}/custom_query.yml"
+        mode: "0640"
+      vars:
+        redmine_import_data: "{{ redmine_custom_queries | default([]) }}"
+      when: >
+        generate_secret_token_result is changed
+        or
+        redmine_reimport_all | default(true)
+        or
+        redmine_reimport_custom_query | default(false)
+    - name: Create import workflow setting files
+      ansible.builtin.template:
+        src: import_data.yml.j2
+        dest: "{{ redmine_tmp_dir }}/workflow.yml"
+        mode: "0640"
+      vars:
+        redmine_import_data: "{{ redmine_workflows | default([]) }}"
+      when: >
+        generate_secret_token_result is changed
+        or
+        redmine_reimport_all | default(true)
+        or
+        redmine_reimport_workflow | default(false)
+    - name: Create import workflow permission setting files
+      ansible.builtin.template:
+        src: import_data.yml.j2
+        dest: "{{ redmine_tmp_dir }}/workflow_permission.yml"
+        mode: "0640"
+      vars:
+        redmine_import_data: "{{ redmine_workflow_permissions | default([]) }}"
+      when: >
+        generate_secret_token_result is changed
+        or
+        redmine_reimport_all | default(true)
+        or
+        redmine_reimport_workflow_permission | default(false)
+    - name: Create import user setting files
+      ansible.builtin.template:
+        src: import_data.yml.j2
+        dest: "{{ redmine_tmp_dir }}/user.yml"
+        mode: "0640"
+      vars:
+        redmine_import_data: "{{ redmine_users | default([]) }}"
+      when: >
+        generate_secret_token_result is changed
+        or
+        redmine_reimport_all | default(true)
+        or
+        redmine_reimport_user | default(false)
+    - name: Create import group setting files
+      ansible.builtin.template:
+        src: import_data.yml.j2
+        dest: "{{ redmine_tmp_dir }}/group.yml"
+        mode: "0640"
+      vars:
+        redmine_import_data: "{{ redmine_groups | default([]) }}"
+      when: >
+        generate_secret_token_result is changed
+        or
+        redmine_reimport_all | default(true)
+        or
+        redmine_reimport_group | default(false)
+    - name: Create import project setting files
+      ansible.builtin.template:
+        src: import_data.yml.j2
+        dest: "{{ redmine_tmp_dir }}/project.yml"
+        mode: "0640"
+      vars:
+        redmine_import_data: "{{ redmine_projects | default([]) }}"
+      when: >
+        generate_secret_token_result is changed
+        or
+        redmine_reimport_all | default(true)
+        or
+        redmine_reimport_project | default(false)
+    - name: Create import attachment setting files
+      when: >
+        generate_secret_token_result is changed
+        or
+        redmine_reimport_attachment | default(false)
+      block:
+        - name: upload attachment files
+          ansible.builtin.include_tasks: import/attachment_at.yml
+          loop: "{{ redmine_attachments | default([]) }}"
+        - name: Create import attachment setting files
+          ansible.builtin.template:
+            src: import_data.yml.j2
+            dest: "{{ redmine_tmp_dir }}/attachment.yml"
+            mode: "0640"
+          vars:
+            redmine_import_data: "{{ tmp_uploaded_attachments | default([]) }}"
+    - name: Create import message customize setting files
+      ansible.builtin.template:
+        src: import_data.yml.j2
+        dest: "{{ redmine_tmp_dir }}/message_customize.yml"
+        mode: "0640"
+      vars:
+        redmine_import_data: "{{ redmine_message_customize | default({}) }}"
+      when: >
+        generate_secret_token_result is changed
+        or
+        redmine_reimport_all | default(true)
+        or
+        redmine_reimport_message_customize | default(false)
+    - name: Create import view customize setting files
+      ansible.builtin.template:
+        src: import_data.yml.j2
+        dest: "{{ redmine_tmp_dir }}/view_customize.yml"
+        mode: "0640"
+      vars:
+        redmine_import_data: "{{ redmine_view_customize | default([]) }}"
+      when: >
+        generate_secret_token_result is changed
+        or
+        redmine_reimport_all | default(true)
+        or
+        redmine_reimport_view_customize | default(false)
+    - name: Create import issue templates setting files
+      ansible.builtin.template:
+        src: import_data.yml.j2
+        dest: "{{ redmine_tmp_dir }}/issue_template.yml"
+        mode: "0640"
+      vars:
+        redmine_import_data: "{{ redmine_issue_templates | default([]) }}"
+      when: >
+        generate_secret_token_result is changed
+        or
+        redmine_reimport_all | default(true)
+        or
+        redmine_reimport_issue_templates | default(false)
+    - name: Create import note templates setting files
+      ansible.builtin.template:
+        src: import_data.yml.j2
+        dest: "{{ redmine_tmp_dir }}/note_template.yml"
+        mode: "0640"
+      vars:
+        redmine_import_data: "{{ redmine_note_templates | default([]) }}"
+      when: >
+        generate_secret_token_result is changed
+        or
+        redmine_reimport_all | default(true)
+        or
+        redmine_reimport_issue_templates_note | default(false)
+    - name: Update Redmine settings
+      ansible.builtin.command:
+        cmd: bundle exec rails runner {{ redmine_bin_dir }}/import.rb
+        chdir: "{{ redmine_root }}"
