--- a/.devcontainer/roles/redmine/tasks/theme.yml
+++ b/.devcontainer/roles/redmine/tasks/theme.yml
@@ -1,11 +1,11 @@
 ---
 - name: テーマディレクトリの存在確認
   ansible.builtin.stat:
-    path: "{{ base_dir }}/themes"
+    path: "{{ redmine_theme_dir }}"
   register: theme_dir_result
 - name: テーマディレクトリ用変数を設定
   ansible.builtin.set_fact:
-    redmine_theme_dir: "{{ base_dir }}/{{ 'themes' if theme_dir_result.stat.exists else 'public/themes' }}"
+    redmine_theme_dir: "{{ redmine_root }}/{{ 'themes' if theme_dir_result.stat.exists else 'public/themes' }}"
 - name: テーマのインストール/更新
   ansible.builtin.git:
     repo: "{{ theme.value.repo }}"
